--- a/src/app/SectographApp/app.json
+++ b/src/app/SectographApp/app.json
@@ -26,7 +26,10 @@
         "page": {
           "pages": [
             "page/index",
-            "page/event"
+            "page/event",
+            "page/add_new_event/start_date",
+            "page/add_new_event/end_date",
+            "page/add_new_event/description"
           ]
         },
         "app-side": {
