add events edit and delete functions

--- a/src/app/SectographApp/app.json
+++ b/src/app/SectographApp/app.json
@@ -27,6 +27,7 @@
           "pages": [
             "page/index",
             "page/event",
+            "page/edit",
             "page/add_new_event/start_date",
             "page/add_new_event/end_date",
             "page/add_new_event/description"
