--- a/src/app/SectographApp/app.json
+++ b/src/app/SectographApp/app.json
@@ -27,7 +27,8 @@
           "pages": [
             "page/index",
             "page/event",
-            "page/edit",
+            "page/list",
+            "page/add_new_event/color",
             "page/add_new_event/start_date",
             "page/add_new_event/end_date",
             "page/add_new_event/description"
