--- a/src/watchface/SectographWF/app.json
+++ b/src/watchface/SectographWF/app.json
@@ -12,12 +12,17 @@
     "vender": "zepp",
     "description": "empty watchface"
   },
-  "permissions": [],
+  "permissions": [
+    "data:user.hd.step",
+    "data:user.hd.calorie",
+    "data:user.hd.distance",
+    "data:user.hd.heart_rate"
+  ],
   "runtime": {
     "apiVersion": {
-      "compatible": "2.0.0",
-      "target": "2.0.0",
-      "minVersion": "2.0.0"
+      "compatible": "3.0.0",
+      "target": "3.0.0",
+      "minVersion": "3.0.0"
     }
   },
   "targets": {
